# ATV-Phoenix

./: .gitattributes  .gitignore  AGENTS.md  BUILDLOG.md  CHANGELOG.md  Cargo.toml  MISSION.md  README.md  build.rs  logic.txt
.copilot-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
docs/: autonomous-workflows.md  developer-journey.md  fmt-policy.md  intent-to-outcome.md  skills.md  v0-spine-design.md
eval/: scoreboard.json
evals/: .gitignore
examples/: capture_prompts.rs  demo_self_heal.rs
graphify-out/: manifest.json
phoenix_learn/: __init__.py  gate.py  graded.py  optimize.py  split.py
phoenix_nest/: __init__.py
phoenix_sense_tmx/: __init__.py
research/: autonomous-workflows-research.md  long-horizon-agent-design.md
scripts/: ci-local.ps1  ci-local.sh  eval-gate.ps1  harvest-datapoint.ps1  install-hooks.ps1  install-hooks.sh  ns_fetch_instances.py  real_agent.py  run-north-star.ps1  update-scoreboard.ps1
skills/: index.md
src/: accept.rs  doctor.rs  heal.rs  intent.rs  lib.rs  monitor.rs  prompt_ledger.rs  sense.rs  snapshot.rs  trace.rs
tests/: build_freshness.rs  gate_ledger.rs  install_doctor.rs  intent.rs  m1_self_heal.rs  m2_mcp_session.rs  okf_sense.rs  skills_doctor.rs  test_auto_merge_gate.py  test_cloud_setup.py  test_connector_proof_ci.py  test_gate_contract.py  test_harness_eval_protocol.py  test_harness_runner.py  test_harvest_datapoint.py  test_live_gate_windows.py  test_mission_north_star.py  test_nest_emit.py  test_north_star_runner.py  test_phoenix_graded.py  test_real_agent.py  (+12 more)
(+253 files in other folders)
