[package]
name = "phoenix"
version = "0.4.0"
edition = "2021"
description = "ATV-Phoenix - self-healing spine for GitHub Copilot (sense/heal/snapshot/trace)"
license = "MIT"

[[bin]]
name = "phoenix-mcp"
path = "src/bin/phoenix_mcp.rs"

[lib]
name = "phoenix"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
regex = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"
